--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Abhishek  | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Abhishek Kumar | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.ico">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Font -->
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<!-- ================= NAVBAR ================= -->
 <header>
-    <nav class="navbar">
-      <div class="logo">Abhishek kumar</div>
-  
-      <ul class="nav-links" id="navLinks">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#tech">Tech Stack</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="https://drive.google.com/file/d/1_jKWMFnG3e9y8oa-5Dw21zwBjUQCbWLP/view?usp=drive_link" target="_blank">Resume</a></li>
-      </ul>
-  
-      <div class="nav-right">
-        <button id="darkToggle">🌙</button>
-        <div class="hamburger" onclick="toggleMenu()">☰</div>
-      </div>
-    </nav>
-  </header>
-  
+  <nav class="navbar">
+    <div class="logo">Abhishek Kumar</div>
 
-<!-- ================= HOME / ABOUT ================= -->
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#tech">Tech</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li>
+        <a 
+          href="asset/Abhishek_kumar_resume.pdf" 
+          target="_blank" 
+          download="Abhishek_Kumar_Resume"
+          class="resume-btn"
+        >
+          Resume
+        </a>
+      </li>
+    </ul>
+
+    <div class="nav-right">
+      <button id="darkToggle">🌙</button>
+      <div class="hamburger" onclick="toggleMenu()">☰</div>
+    </div>
+  </nav>
+</header>
+
+<!-- HERO -->
 <section id="home" class="home">
-  <div class="home-content">
-    <h1>Hi, I'm Abhisek kumar 👋</h1>
+  <div class="home-text">
+    <h1>Hi, I'm <span>Abhishek Kumar</span></h1>
     <p>
-        I am a passionate Full Stack Developer who builds fast, responsive, and scalable web applications.
-        I specialize in creating clean user interfaces and powerful backend systems using
-        HTML, CSS, JavaScript, React, and Node.js.
+      Full Stack Developer building fast, scalable and responsive web applications
+      with clean UI and strong backend systems.
     </p>
 
     <div class="home-buttons">
@@ -54,50 +56,76 @@
   </div>
 
   <div class="home-image">
-    <img src="./asset/abhishek.jpg" alt="Profile Image">
+    <img src="asset/Abhi_professional.png" alt="Abhishek Kumar">
   </div>
 </section>
 
-<!-- ================= PROJECTS ================= -->
+<!-- PROJECTS -->
 <section id="projects" class="projects">
   <h2>Projects</h2>
-  <p class="section-sub">Showcasing my best work</p>
+  <p class="section-sub">Some of my recent work</p>
 
   <div class="project-grid">
 
+    <!-- PROJECT 1 -->
     <div class="project-card">
-      <img src="./asset/artpicture.png">
-      <h3>Art Collab App</h3>
-      <p>ArtCollab App is a collaborative platform designed to connect artists, enable real-time creative collaboration,
-        and showcase digital artwork. The application features secure user authentication, artist profiles,
-        project-based collaboration spaces, real-time chat, and artwork sharing.
-        Built using modern technologies including HTML,CSS,JS
-        ArtCollab demonstrates my ability to build full-stack, scalable, and user-centric applications.</p>
-      <p class="tech">HTML,CSS,JS</p>
-      <div class="project-links">
-        <a href="https://abhishek20022.github.io/ArtCollab_App/" target="_blank">GitHub</a>
-        <a href="https://drive.google.com/file/d/1rhTomenKFW9wpDLQt4-BeqjPI-wvmn4C/view?usp=sharing" target="_blank">Live</a>
+      <div class="project-image">
+        <img src="asset/artcollab_portfolio_clean.png" alt="ArtCollab App">
+        <span class="project-badge">Featured</span>
+      </div>
+
+      <h3 class="project-title">ArtCollab App</h3>
+
+      <p class="project-desc">
+        A collaborative platform for artists to connect, create, and share artwork in real-time.
+        Includes authentication, collaboration spaces, and live interaction features.
+      </p>
+
+      <div class="project-tags">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+      </div>
+
+      <div class="project-buttons">
+        <a href="https://abhishek20022.github.io/ArtCollab_App/" target="_blank" class="btn-sm">Live Demo</a>
+        <a href="https://github.com/abhishek20022/ArtCollab_App" target="_blank" class="btn-sm-outline">GitHub</a>
       </div>
     </div>
 
+    <!-- PROJECT 2 -->
     <div class="project-card">
-      <img src="./asset/property.png">
-      <h3>Property Listing Platform</h3>
-      <p>A modern and responsive Property Listing Platform that allows users to browse, search, filter, and view detailed property listings. The platform is designed for real estate businesses to showcase properties for rent or sale with a clean and user-friendly interface.</p>
-      <p class="tech">React ,js,Tailwind css</p>
-      <div class="project-links">
-        <a href="#" target="_blank">GitHub</a>
-        <a href="https://drive.google.com/file/d/15ijLLnbM_JHyUiWoLdJszBHMtE1_4Kjg/view?usp=sharing" target="_blank">Demo</a>
+      <div class="project-image">
+        <img src="asset/image.png" alt="Property Listing Platform">
+        <span class="project-badge secondary">UI Project</span>
+      </div>
+
+      <h3 class="project-title">Property Listing Platform</h3>
+
+      <p class="project-desc">
+        A modern real estate web platform that allows users to browse, filter,
+        and explore property listings with a clean and responsive UI.
+      </p>
+
+      <div class="project-tags">
+        <span>React</span>
+        <span>JavaScript</span>
+        <span>Tailwind CSS</span>
+      </div>
+
+      <div class="project-buttons">
+        <a href="#" class="btn-sm">Live Demo</a>
+        <a href="#" class="btn-sm-outline">GitHub</a>
       </div>
     </div>
 
   </div>
 </section>
 
-<!-- ================= TECH STACK ================= -->
-<section id="tech" class="tech">
-  <h2>Tech Stack & Tools</h2>
 
+<!-- TECH -->
+<section id="tech" class="tech">
+  <h2>Tech Stack</h2>
   <div class="tech-grid">
     <span>HTML</span>
     <span>CSS</span>
@@ -110,25 +138,20 @@
   </div>
 </section>
 
-<!-- ================= CONTACT ================= -->
+<!-- CONTACT -->
 <section id="contact" class="contact">
-  <h2>Contact Me</h2>
+  <h2>Contact</h2>
+  <p>Email: <b>abhishekkrsam324@gmail.com</b></p>
+  <p>Phone: <b>+91 8603478267</b></p>
 
-  <div class="contact-box">
-    <p>Email: abhishekkrsam324@gmail.com</p>
-    <p>Phone: +91-8603478267</p>
-
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/abhishek-kumar-3ab23521a/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/abhishek20022" target="_blank">GitHub</a>
-    </div>
+  <div class="social-links">
+    <a href="https://www.linkedin.com/in/abhishek-kumar-3ab23521a/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/abhishek20022" target="_blank">GitHub</a>
   </div>
 </section>
 
-<!-- ================= FOOTER ================= -->
 <footer>
-  <p>© 2025 Abhishek kumar | All Rights Reserved</p>
-  
+  © 2025 Abhishek Kumar. All Rights Reserved.
 </footer>
 
 <script src="script.js"></script>
