add live project link on index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="project-buttons">
-        <a href="https://abhishek20022.github.io/ArtCollab_App/" target="_blank" class="btn-sm">Live Demo</a>
+        <a href="https://art-collab-app.vercel.app/" target="_blank" class="btn-sm">Live Demo</a>
         <a href="https://github.com/abhishek20022/ArtCollab_App" target="_blank" class="btn-sm-outline">GitHub</a>
       </div>
     </div>
@@ -114,8 +114,8 @@
       </div>
 
       <div class="project-buttons">
-        <a href="#" class="btn-sm">Live Demo</a>
-        <a href="#" class="btn-sm-outline">GitHub</a>
+        <a href="https://property-listing-app-eosin.vercel.app/" class="btn-sm">Live Demo</a>
+        <a href="https://github.com/abhishek20022/property-listing-app.git" class="btn-sm-outline">GitHub</a>
       </div>
     </div>
 
